external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_enum_wrong_variant_field.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04016]: too few arguments
   ┌─ tests/move_2024/matching/invalid_enum_wrong_variant_field.move:14:9
   │
14 │         E::A(x) => x,
   │         ^^^^^^^ Missing pattern for field '1' in '0x42::m::E::A'
